--- a/devel/R-cran-pkgload/Makefile
+++ b/devel/R-cran-pkgload/Makefile
@@ -3,7 +3,7 @@ DISTVERSION=	1.3.2.1
 CATEGORIES=	devel
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Simulate Package Installation and Attach
 WWW=		https://github.com/r-lib/pkgload
 
