--- a/devel/R-cran-whisker/Makefile
+++ b/devel/R-cran-whisker/Makefile
@@ -4,7 +4,7 @@ PORTREVISION=	1
 CATEGORIES=	devel
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	{{mustache}} for R, Logicless Templating
 WWW=		https://github.com/edwindj/whisker
 
