--- a/devel/py-atomicwrites/Makefile
+++ b/devel/py-atomicwrites/Makefile
@@ -4,7 +4,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Atomic file writes library
 WWW=		https://github.com/untitaker/python-atomicwrites
 
