--- a/math/R-cran-hexbin/Makefile
+++ b/math/R-cran-hexbin/Makefile
@@ -4,7 +4,7 @@ PORTREVISION=	1
 CATEGORIES=	math
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Hexagonal Binning Routines
 WWW=		https://github.com/edzer/hexbin
 
