--- a/math/R-cran-intervals/Makefile
+++ b/math/R-cran-intervals/Makefile
@@ -3,7 +3,7 @@ DISTVERSION=	0.15.4
 CATEGORIES=	math
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Tools for Working with Points and Intervals
 WWW=		https://github.com/edzer/intervals
 
