--- a/www/py-pyocclient/Makefile
+++ b/www/py-pyocclient/Makefile
@@ -4,7 +4,7 @@ CATEGORIES=	www python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Python Owncloud client library
 WWW=		https://github.com/owncloud/pyocclient
 
