--- a/devel/R-cran-brio/Makefile
+++ b/devel/R-cran-brio/Makefile
@@ -4,7 +4,7 @@ PORTREVISION=	1
 CATEGORIES=	devel
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	uzsolt@FreeBSD.org
 COMMENT=	Basic R Input Output
 WWW=		https://brio.r-lib.org
 
