--- a/devel/R-cran-callr/Makefile
+++ b/devel/R-cran-callr/Makefile
@@ -4,7 +4,7 @@ PORTREVISION=	1
 CATEGORIES=	devel
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	uzsolt@FreeBSD.org
 COMMENT=	Call R from R
 WWW=		https://callr.r-lib.org
 
