--- a/devel/py-python-pcre/Makefile
+++ b/devel/py-python-pcre/Makefile
@@ -4,7 +4,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Python PCRE bindings
 WWW=		https://github.com/awahlig/python-pcre
 
