--- a/devel/py-thriftpy2/Makefile
+++ b/devel/py-thriftpy2/Makefile
@@ -4,7 +4,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Pure python implementation of Apache Thrift
 WWW=		https://github.com/Thriftpy/thriftpy2
 
