--- a/sysutils/py-diffoscope/Makefile
+++ b/sysutils/py-diffoscope/Makefile
@@ -4,7 +4,7 @@ CATEGORIES=	sysutils python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	In-depth comparison of files, archives, and directories
 WWW=		https://diffoscope.org/
 
