--- a/mail/Makefile
+++ b/mail/Makefile
@@ -474,6 +474,7 @@
     SUBDIR += phpmailer
     SUBDIR += phpmailer6
     SUBDIR += pine-pgp-filters
+    SUBDIR += pizauth
     SUBDIR += pm-lib
     SUBDIR += policyd2
     SUBDIR += popa3d
